[package]
name = "openshadinglanguage"
version = "0.1.0"
authors = ["Scott Wilson <scott@propersquid.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Rust bindings for OpenShadingLanguage (placeholder)"
keywords = ["vfx", "animation", "cg", "render", "openshadinglanguage", "osl"]
categories = ["api-bindings"]
homepage = "https://www.github.com/scott-wilson/OpenShadingLanguage-rs"
documentation = "https://docs.rs/openshadinglanguage"
repository = "https://www.github.com/scott-wilson/OpenShadingLanguage-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
